# OkIGotIt

./: .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .railwayignore  .replit  CHANGELOG.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  backup.sh  check_db_schema.py  create_admin.py  deploy.sh  dev-proxy.js  docker-compose.yml  fix_ts_errors.py  fix_unused_imports.sh  index.html  manage_db.py  new_token.json  new_token.txt  nginx.frontend.conf  nixpacks.toml  package-lock.json  package.json  package.json.tmp  production-deploy.sh  pyproject.toml  replit.md  requirements.txt  sample_products.csv  seed_data.py  (+10 more)
.github/workflows/: ci-cd.yml
app/: auth.py  database.py  init_db.py  main.py  models.py  schemas.py
app/bots/: telegram_importer.py
app/config/: security.py
app/database/migrations/: 001_initial_schema.py
app/database/seeders/: 001_admin_user.py  002_sample_products.py
app/routers/: admin.py  auth.py  banners.py  bot_management.py  cart.py  orders.py  product_import.py  products.py  telegram_webhook.py
app/utils/: product_import.py
attached_assets/: Pasted---1755985382614_1755985382614.txt  Pasted--0-vite-v7-1-3-building-for-production-0-0-watching-for-file-changes-0-0-build--1755984764882_1755984764882.txt  Pasted--Allowed-Hosts-Vite-vite-config-ts--1755976740392_1755976740393.txt  Pasted--CSS-UI--1755983350284_1755983350285.txt  Pasted--JSON-HTML-doctype--1755981620310_1755981620310.txt  Pasted--Replit--1755974971388_1755974971389.txt  Pasted--Replit--1755977713882_1755977713883.txt  Pasted--Replit--1755982026392_1755982026392.txt  Pasted--Replit-AI--1755978836288_1755978836289.txt  Pasted--Replit-AI--1755979158423_1755979158424.txt  Pasted--Replit-AI--1755980876715_1755980876716.txt  Pasted--Replit-AI--1755981252375_1755981252375.txt  Pasted--Replit-AI--1755982799222_1755982799223.txt  Pasted--Replit-AI--1755986100443_1755986100444.txt  Pasted--Replit-AI--1755988681251_1755988681252.txt  Pasted--Replit-PORT--1755978688804_1755978688805.txt  Pasted--a-href--1755982366818_1755982366818.txt  Pasted--stretched-link--1755987027372_1755987027373.txt
bot/: telegram_importer.py
docs/: README.md  api.md
docs/api/: README.md  authentication.md  cart.md  common.md  orders.md  products.md  users.md
docs/deployment/: README.md
docs/development/: setup.md
public/: app-config.json
scripts/: backup_database.sh  setup_production_db.sh
src/: App.tsx  index.css  main.tsx
src/admin/: AdminDashboard.tsx  AdminLayout.tsx  AdminLogin.tsx  AdminProductManagement.tsx  BlogCategories.tsx  BlogEditor.tsx  BlogManagement.tsx  CategoryManagement.tsx  InventoryManagement.tsx  OrderAnalytics.tsx  OrderDetailsModal.tsx  OrderManagement.tsx  OrdersPage.tsx  ProductAnalytics.tsx  ProductForm.tsx  ProductManagement.tsx  ProductsPage.tsx  ReviewsManagement.tsx  SettingsPage.tsx  UserAnalytics.tsx  UserManagement.tsx  UsersPage.tsx
src/admin/components/: AdvancedUserFeatures.tsx  BulkActions.tsx  CustomerCommunication.tsx  ExportModal.tsx  PersianDataTable.tsx  PersianDatePicker.tsx  PersianModal.tsx  PersianPagination.tsx  PersianPriceDisplay.tsx  PersianStatusBadge.tsx  PersianTable.tsx  PersianUserForm.tsx  StatusBadge.tsx  (+3 more)
src/components/: BannerGrid.tsx  BlogPreview.tsx  Footer.tsx  Header.tsx  HeaderCartButton.tsx  Hero.tsx  Layout.tsx  PersianDatePicker.tsx  UserMenu.tsx
src/contexts/: AuthContext.tsx  CartContext.tsx
src/dev/: ClickInspector.tsx  PathDebug.tsx
src/hooks/: useLockBodyScroll.ts
src/lib/: api.ts  date.ts  fmt.ts  runtimeConfig.ts  scroll.ts
src/pages/: Admin.tsx  Blog.tsx  Checkout.tsx  Dashboard.tsx  Home.tsx  NotFound.tsx  ProductDetail.tsx  Products.tsx
src/routes/: ProtectedAdminRoute.tsx  RequireAuth.tsx
src/utils/: iranian-validation.ts  persian.ts
(+21 files in other folders)
